--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"><!-- SEO Meta Tags -->
   <title>Salah Uddin Kader - Full Stack Developer &amp; UI/UX Designer | Web Development Expert</title>
-  <meta name="description" content="Salah Uddin Kader - Expert Full Stack Developer specializing in React, Node.js, Python, and modern web technologies. 5+ years experience building stunning web applications and digital experiences.">
+  <meta name="description" content="Salah Uddin Kader - Expert Full Stack Developer specializing in React, Node.js, Python, and modern web technologies. 1.5+ years experience building stunning web applications and digital experiences.">
   <meta name="keywords" content="Full Stack Developer, Web Developer, UI/UX Designer, React Developer, Node.js Developer, Python Developer, JavaScript Expert, Salah Uddin Kader, Frontend Developer, Backend Developer, Web Design">
   <meta name="author" content="Salah Uddin Kader">
   <meta name="robots" content="index, follow">
@@ -33,7 +33,7 @@
         "@type": "Person",
         "name": "Salah Uddin Kader",
         "jobTitle": "Full Stack Developer & UI/UX Designer",
-        "url": "https://salahuddinkader.dev",
+        "url": "https://github.com/salahuddingfx",
         "sameAs": [
             "https://github.com/salahuddingfx",
             "https://twitter.com/salahuddingfx",
